remove deployment arg from bundle install on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ rvm:
   - ruby-head
 
 cache: bundler
-bundler_args: --jobs=4 --retry=3 --deployment
+bundler_args: --jobs=4 --retry=3
 sudo: false
 
 
