--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,22 @@
 language: ruby
 
 rvm:
-  - 2.2.8
-  - 2.3.5
-  - 2.4.2
+  - 2.2.9
+  - 2.3.6
+  - 2.4.3
+  - 2.5.0
   - ruby-head
+matrix:
+  allow_failures:
+    - rvm: ruby-head
 
 cache: bundler
 bundler_args: --jobs=4 --retry=3
 sudo: false
 
 
+before_install:
+  - gem update --system
 
 script:
   - bundle exec rake test
